--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -34,10 +34,10 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "매크로가 성공적으로 변환되었습니다, 다른 매크로와 함께 찾아보세요",
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요",
-  "MESSAGE/KEYBINDS/UNBINDABLE": "",
-  "MESSAGE/UTILITY/CRASH/0": "",
-  "MESSAGE/UTILITY/CRASH/1": "",
-  "MESSAGE/UTILITY/CRASH/2": "",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "선택한 요소에 키 바인드를 설정할 수 없습니다",
+  "MESSAGE/UTILITY/CRASH/0": "정말로 Geometry Dash를 크래시 시키겠습니까? 저정되지 않은 데이터가 삭제됩니다",
+  "MESSAGE/UTILITY/CRASH/1": "게임을 크래시 시키고 싶습니다. 계속하시겠습니까?",
+  "MESSAGE/UTILITY/CRASH/2": "게임 크래시?",
   "ICONIC/DISABLE": "비활성화",
   "ICONIC/EFFECTS": "이펙트",
   "ICONIC/GENERAL": "일반",
@@ -67,8 +67,8 @@
   "GM_VAR/0061": "거미 대시 전환",
   "GM_VAR/0062": "대시 불꽃 전환",
   "GM_VAR/0096": "웨이브 트레일 전환",
-  "HOME/AUTO_UPDATE": "",
-  "HOME/AUTO_UPDATE/TIP": "",
+  "HOME/AUTO_UPDATE": "자동 업데이트",
+  "HOME/AUTO_UPDATE/TIP": "자동 업데이트를 켜거나 끕니다. 이미 다운로드된 업데이트가 있는 경우 재시작 시 설치됩니다",
   "HOME/LANGUAGE": "언어",
   "HOME/SEARCH/SEARCH": "검색",
   "HOME/SEARCH/AUTO_SELECT": "자동 선택",
@@ -103,10 +103,10 @@
   "BYPASS": "우회",
   "BYPASS/HACK_ANTI_KICK": "안티-킥",
   "BYPASS/HACK_ANTI_KICK/TIP": "특정 레벨을 플레이할 때 차단되는 것을 방지합니다",
-  "BYPASS/HACK_CHALLENGE": "",
-  "BYPASS/HACK_CHALLENGE/TIP": "",
-  "BYPASS/HACK_KEYMASTER": "",
-  "BYPASS/HACK_KEYMASTER/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "챌린지 레벨",
+  "BYPASS/HACK_CHALLENGE/TIP": "Vault of Secret에 있는 \"The Challenge\"를 잠금 해제합니다",
+  "BYPASS/HACK_KEYMASTER": "키마스터",
+  "BYPASS/HACK_KEYMASTER/TIP": "Vault of Secret에 있는 키마스터 방을 잠금 해제합니다",
   "BYPASS/HACK_MAIN_LEVELS": "메인 레벨",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "메인 데몬 레벨을 잠금 해제합니다",
   "BYPASS/HACK_MUSIC_UNLOCKER": "음악 잠금 해제",
@@ -124,12 +124,12 @@
   "BYPASS/HACK_UNLOCK_VAULTS": "금고 잠금 해제",
   "BYPASS/HACK_UNLOCK_VAULTS/TIP": "모든 금고를 잠금 해제합니다",
   "COSMETIC": "외형",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "정확한 퍼센트",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "정확한 진행도",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "게임 내 퍼센트 소수점 설정을 사용자 지정할 수 있습니다",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "더 나은 계산",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "%를 더 정확하게 계산하고 스타트포스 사용 시 진행도 오류를 수정합니다",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "소수점",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "소수점",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "볼 회전 버그",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 버전의 배럴 롤 버그를 재현합니다",
   "COSMETIC/HACK_NO_CIRCLES": "원형 파티클 비활성화",
@@ -178,7 +178,7 @@
   "COSMETIC/NO_PARTICLES/DROPDOWN/0": "부스트 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/1": "버블 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/2": "충격 이펙트",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/3": "발판 이펙트",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/3": "터짐 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/4": "상자 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/5": "코인 이펙트",
   "COSMETIC/NO_PARTICLES/DROPDOWN/6": "대시 이펙트",
@@ -245,8 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "비율",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "배",
-  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
-  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "항상 트레일 켜기",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "플레이어 트레일을 항상 표시합니다",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "사망 시 웨이브 트레일",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "사망 시 웨이브 트레일을 계속 표시합니다",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "웨이브 펄스 승수",
@@ -357,10 +357,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "레벨 페이지를 열면 자동으로 음악을 다운로드합니다",
   "LEVEL/HACK_AUTO_START_POS": "자동 스타트포스",
   "LEVEL/HACK_AUTO_START_POS/TIP": "포탈에 스타트포스를 자동으로 배치합니다",
-  "LEVEL/HACK_CBF_GMVAR_CBS": "",
-  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
-  "LEVEL/HACK_CBF_GMVAR_COS": "",
-  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "Click Between Steps",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "인게임 설정에서 Click Between Steps를 켜거나 끕니다",
+  "LEVEL/HACK_CBF_GMVAR_COS": "Click on Steps",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "인게임 설정에서 Click on Steps를 켜거나 끕니다",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다, by Syzzi (설치가 필요합니다!)",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "스탭에서 클릭",
@@ -451,8 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "특수",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "시드",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "시드",
-  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
-  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "변동값 고정",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "트리거의 랜덤 변동값을 고정합니다",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "랜덤 시드",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "여러 시도에 걸쳐 랜덤 트리거를 일관되게 만듭니다 (연습 모드 포함)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "시간 (밀리초)",
@@ -463,7 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "축 정렬 표시",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "회전된 오브첵트의 방향성 히트박스와 함께 축 정렬 히트박스를 표시합니다",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "히트박스 채우기",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "활성화된 오브젝트 숨기기",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "위험",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "불투명도",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "불투명도",
@@ -471,7 +471,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "통과 가능",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "플레이어",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "플레이어 충돌 차단",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "플레이어 회전",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "활성 상태만 표시",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "고체",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "특수",
@@ -482,13 +482,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW": "그리기 길이",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/PRE": "그리기 길이",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " 프레임",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "히트박스 표시 필수",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "무제한 에디터 길이",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "트레일 투명도",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "트레일 투명도",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "%",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "하프 틱 강조 표시",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "Click Between Steps가 적용된 틱을 강조 표시합니다",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "히트박스 트레일 표시",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "시도 중 플레이어의 히트박스가 어디로 갔는지 트레일을 표시합니다, 히트박스 표시가 필요합니다",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "궤적 표시",
@@ -602,8 +602,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "엔드스크린 추가 기능 숨기기",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "메뉴 눈 숨기기",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "일시 정지 시 아이콘 숨기기",
-  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
-  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "RobsVault 바로가기 숨기기",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "메인 레벨의 RobsvVault 바로가기를 숨깁니다. Made by Beat",
   "SPEEDHACK": "스피드핵",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "활성화됨",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "설정된 배수로 게임 전체 속도를 느리게 합니다",
@@ -640,7 +640,7 @@
   "UTILITY": "유틸리티",
   "UTILITY/CLICKS/P1": "플레이어 1 클릭",
   "UTILITY/CLICKS/P2": "플레이어 2 클릭",
-  "UTILITY/CRASH": "",
+  "UTILITY/CRASH": "게임 크래시",
   "UTILITY/DEV_TOOLS": "개발자 도구 열기",
   "UTILITY/DEV_TOOLS/TIP": "Geode 개발자 도구를 엽니다, 모드가 설치되어 있어야 합니다",
   "UTILITY/DIRECTIONAL/P1_LEFT": "좌측",
@@ -734,8 +734,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12시간 형식",
   "STATUS/FRAME/ENABLED": "프레임 카운터",
   "STATUS/POSITION/ENABLED": "위치",
-  "STATUS/VELOCITY/ENABLED": "",
-  "STATUS/DEAD/ENABLED": "",
+  "STATUS/VELOCITY/ENABLED": "속도",
+  "STATUS/DEAD/ENABLED": "사망",
   "STATUS/REPLAY_STATE/ENABLED": "리플레이 상태",
   "STATUS/SESSION_TIME/ENABLED": "세션 시간",
   "REPLAY": "리플레이",
