--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -34,10 +34,10 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makroa arrakastaz bihurtuta! Zure beste makroekin aurkitu ahal duzu",
   "MESSAGE/REPLAY/SAVE": "Zure macro-an aldaketak gorde nahi duzu?",
   "MESSAGE/KEYBINDS/EMPTY": "Mesedez, lehenik lasterbide bat sar ezazu",
-  "MESSAGE/KEYBINDS/UNBINDABLE": "",
-  "MESSAGE/UTILITY/CRASH/0": "",
-  "MESSAGE/UTILITY/CRASH/1": "",
-  "MESSAGE/UTILITY/CRASH/2": "",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "Hautatutako elementu honetan lasterbideak debekatuta daude",
+  "MESSAGE/UTILITY/CRASH/0": "Ziur zaude Geometry Dash lehertu nahi duzula? Gorde gabeko aurrerapenak galduko dira",
+  "MESSAGE/UTILITY/CRASH/1": "Zure jokua LEHERTU nahi duzu. BENETAN?",
+  "MESSAGE/UTILITY/CRASH/2": "JOKUA LEHERTU?",
   "ICONIC/DISABLE": "Itzali",
   "ICONIC/EFFECTS": "Efektuak",
   "ICONIC/GENERAL": "Orokorra",
@@ -67,8 +67,8 @@
   "GM_VAR/0061": "Aldatu Spider-aren Dash",
   "GM_VAR/0062": "Aldatu Dash Sua",
   "GM_VAR/0096": "Aldatu Wave Aztarna",
-  "HOME/AUTO_UPDATE": "",
-  "HOME/AUTO_UPDATE/TIP": "",
+  "HOME/AUTO_UPDATE": "Auto-Eguneraketak",
+  "HOME/AUTO_UPDATE/TIP": "Eguneraketa automatikoen etengailua, eguneraketaren bat jadanik jaitsita badago, berrabiaraztean instalatuko da",
   "HOME/LANGUAGE": "Hizkuntza",
   "HOME/SEARCH/SEARCH": "Bilatu",
   "HOME/SEARCH/AUTO_SELECT": "Hautatu Automatikoki",
@@ -103,10 +103,10 @@
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Kanporatzerik Ez",
   "BYPASS/HACK_ANTI_KICK/TIP": "Zenbait mailetatik kanporatzea sahiesten zaitu",
-  "BYPASS/HACK_CHALLENGE": "",
-  "BYPASS/HACK_CHALLENGE/TIP": "",
-  "BYPASS/HACK_KEYMASTER": "",
-  "BYPASS/HACK_KEYMASTER/TIP": "",
+  "BYPASS/HACK_CHALLENGE": "Challenge Maila",
+  "BYPASS/HACK_CHALLENGE/TIP": "«Vault of Secrets» barruko «The Challenge» maila desblokeatzen du",
+  "BYPASS/HACK_KEYMASTER": "Keymaster",
+  "BYPASS/HACK_KEYMASTER/TIP": "«Vault of Secrets» barruan «Keymaster» gela desblokeatzen du",
   "BYPASS/HACK_MAIN_LEVELS": "Maila Nagusiak",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Demon maila nagusiak desblokeatzen ditu.",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Musika Desblokeatu",
@@ -126,10 +126,10 @@
   "COSMETIC": "Apaingarriak",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Portzentai Zehatza",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Joku barruko Portzentai Dezimal-konfigurazioan, dezimal-toki kopurua pertsonalizatzeko aukera ematen du",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "Kalkulu Hobeak",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "Ehunekoak zehatzagoak egiten ditu, bai eta Start Pos-ekin ehunekoak konpontzen ditu",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "Dezimalak",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "Dezimalak",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Biraketaren Bug-a",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 bertsioaren «Ball Barrel-Roll» errorea birsortzen du",
   "COSMETIC/HACK_NO_CIRCLES": "Borobil Efekturik Ez",
@@ -223,7 +223,7 @@
   "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Wave taupadak desgaitzen ditu",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "Wave-Aztarnarik Ez",
   "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Wave-ren aztarna desgaitzen du; hala ere, aztarna arrunta jarraitzen da",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Atzeko Wave-Aztarnarik Ez",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Wave Atzean Aztarnarik Ez",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wave-aztarnaren atzeko aztarna arrunta desgaitzen du",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jokalaria Gainean",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Jokalaria (eta wave-aztarna) beste objektuen gainean agertzea behartzen ditu",
@@ -245,8 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tasa (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Tasa",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
-  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
-  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "Aztarna Beti Erakutsi",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "Jokalariaren aztarna beti ikusgai mantentzen du",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Hiltzean Wave-Aztarna",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Hiltzean, wave-aztarna mantentzen du",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Biderkatzailea",
@@ -357,10 +357,10 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Mailaren orria irekitzean, abestiak automatikoki jaisten hasten dira",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Automatikoa",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
-  "LEVEL/HACK_CBF_GMVAR_CBS": "",
-  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
-  "LEVEL/HACK_CBF_GMVAR_COS": "",
-  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "Click Between Steps",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "Joku-barneko «Click Between Steps» aukeraren etengailua",
+  "LEVEL/HACK_CBF_GMVAR_COS": "Click on Steps",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "Joku-barneko «Click on Steps» aukeraren etengailua",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako «Click Between Frames»-en etengailua (jadanik jaitsita egin behar da!)",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
@@ -368,7 +368,7 @@
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint-en muga kentzen du",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Praktikan Txanponak Hartu",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Praktika moduan, sekretu- eta erabiltzaile-txanponak hartzeko aukera ematen ditu. WEGFan-ek eginda",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Praktika moduan, sekretu- eta erabiltzaile-txanponak hartzeko aukera ematen ditu. WEGFan-ek sortua",
   "LEVEL/HACK_CONFIRM_EXIT": "Irtetzeko Baieztatu",
   "LEVEL/HACK_CONFIRM_EXIT/TIP": "Maila batetik irtetzeko, baieztapena behartzen du",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "Guztiz berrezartzeko Baieztatu",
@@ -451,8 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Bereziak",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Hazia",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Hazia",
-  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
-  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "Aldatzeak Blokeatu",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "Trigger-en ausazko aldatzeak blokeatzen ditu",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Ausazko Hazia",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Ausazko trigger-ak saiakeren artean iraunkorrak egiten ditu (praktikak barne)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Denbora (ms)",
@@ -463,7 +463,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Ardatzetara Lerrokatutako Hitbox-ak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Biratutako objektuetan, ardatzetara lerrokatutako hitbox-ak beraien buruen hitbox biratuak bata bestearen gainean erakusten ditu",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitbox-ak Bete",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/HIDE_USED": "Erabilitako Objektuak Ezkutatu",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Arriskuak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Gardentasuna",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "%",
@@ -471,7 +471,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Zeharkagarriak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jokalaria",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Jokalariaren Talka-Blokea",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_ROTATION": "Jokalariaren Biraketa",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Aktiboak Erakutsi Bakarrik",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Solidoak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Bereziak",
@@ -482,13 +482,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW": "Marrazte-Luzeera",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/PRE": "Marrazte-Luzeera",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " fotograma",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "«Hitbox-ak Erakutsi» Behartu",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Editorean Mugagabea",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "Aztarnaren Gardentasuna",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "%",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
-  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "Tick-Erdiak Azpimarratu",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "«Click Between Steps» eragindako tick-ak azpimarratzen ditu",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox-Aztarna Erakutsi",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Jokalariak saiakeran nondik igarotu zuen bidearen aztarna erakusten du, Hitbox-ak Erakutsi aukera behar du",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Bidea Erakutsi",
@@ -534,7 +534,7 @@
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jolastu Menu Nagusian",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Menu nagusien jokalarien kontrola har ezazu!",
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "Audioa Desagertzerik Ez",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Abestiak desagertaraztea gelditzen ditu. Beat egindakoa",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Abestiak desagertaraztea gelditzen ditu. Beat sortutakoa",
   "UNIVERSAL/HACK_NO_TRANSITION": "Transiziorik Ez",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Agertokien transizio-denbora 0 segundura laburtzen du",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Zerrenda Gardenak",
@@ -602,8 +602,8 @@
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Amaiera-Pantailatik Gehigarriak Ezkutatu",
   "INTERFACE/HACK_HIDE_MENU_SNOW": "Menuaren Elurra Ezkutatu",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Pausa-Menuan «Iconic» Ezkutatu",
-  "INTERFACE/HACK_HIDE_ROBSVAULT": "",
-  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "",
+  "INTERFACE/HACK_HIDE_ROBSVAULT": "«RobsVault» Lasterbidea Ezkutatu",
+  "INTERFACE/HACK_HIDE_ROBSVAULT/TIP": "«RobsVault» maila nagusia ezkutatzen du. Beat sortutatkoa",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Gaituta",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Biderkatzaile baten arabera, joku osoa moteltzen edo bizkortzen du",
@@ -640,8 +640,8 @@
   "UTILITY": "Tresneria",
   "UTILITY/CLICKS/P1": "P1 Klik",
   "UTILITY/CLICKS/P2": "P2 Klik",
-  "UTILITY/CRASH": "",
-  "UTILITY/DEV_TOOLS": "«DevTools» Ireki",
+  "UTILITY/CRASH": "Jokua Lehertu",
+  "UTILITY/DEV_TOOLS": "«DevTools» Etengailua",
   "UTILITY/DEV_TOOLS/TIP": "Geode-ko «DevTools» irekitzen du, mod hau instalatuta egon behar da",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Ezkerra",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Eskuina",
@@ -734,8 +734,8 @@
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12 ordukoa",
   "STATUS/FRAME/ENABLED": "Fotograma-Kontadorea",
   "STATUS/POSITION/ENABLED": "Posizioa",
-  "STATUS/VELOCITY/ENABLED": "",
-  "STATUS/DEAD/ENABLED": "",
+  "STATUS/VELOCITY/ENABLED": "Abiadura",
+  "STATUS/DEAD/ENABLED": "Hilda",
   "STATUS/REPLAY_STATE/ENABLED": "Replay Egoera",
   "STATUS/SESSION_TIME/ENABLED": "Sesio-Denbora",
   "REPLAY": "Replay",
