startpos switcher quick switch

--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -516,6 +516,39 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Interface Scale",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "x",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Switch After Death",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "Quick Switch",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "Level Start",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "Level Start",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "1st StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "1st StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "2nd StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "2nd StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "3rd StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "3rd StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "4th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "4th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "5th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "5th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "6th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "6th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "7th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "7th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "8th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "8th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "9th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "9th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "10th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "10th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "11th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "11th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "12th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "12th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "13th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "13th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "14th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "14th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "15th StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "15th StartPos",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "StartPos Switcher",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Lets you switch between multiple start positions in-level",
   "UNIVERSAL": "Universal",
@@ -753,5 +786,6 @@
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Allow Randomness",
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "Block Inputs",
   "REPLAY/CONVERT": "Convert (.json, .gdr)",
-  "REPLAY/NONE": "No Replay Selected"
+  "REPLAY/NONE": "No Replay Selected",
+  "REPLAY/OPEN_DIR": "Open Folder"
 }
