--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -516,6 +516,39 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "インターフェイススケール",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "倍",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "死亡後に切り替え",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "スタートポジションスイッチャー",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "レベル内で複数のスタートポジションを切り替え可能にします",
   "UNIVERSAL": "ユニバーサル",
@@ -753,5 +786,6 @@
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "ランダム性を許可",
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "入力をブロック",
   "REPLAY/CONVERT": "変換",
-  "REPLAY/NONE": "リプレイが選択されていません"
+  "REPLAY/NONE": "リプレイが選択されていません",
+  "REPLAY/OPEN_DIR": ""
 }
