--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -516,6 +516,39 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Boyut",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "x",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Ölümden Sonra Değiştir",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "StartPos Değiştirici",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Seviyedeki StartPos'lar arasında geçiş yapmanızı sağlar",
   "UNIVERSAL": "Evrensel",
@@ -753,5 +786,6 @@
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Rastgeleliğe İzin Ver",
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Dönüştür (.json, .gdr)",
-  "REPLAY/NONE": "Makro Seçilmedi"
+  "REPLAY/NONE": "Makro Seçilmedi",
+  "REPLAY/OPEN_DIR": ""
 }
