--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -516,39 +516,39 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "인터페이스 크기",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "배",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "사망 후 전환",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "빠른 전환",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "레벨 시작",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "레벨 시작",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "1번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "1번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "2번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "2번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "3번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "3번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "4번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "4번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "5번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "5번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "6번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "6번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "7번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "7번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "8번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "8번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "9번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "9번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "10번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "10번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "11번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "11번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "12번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "12번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "13번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "13번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "14번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "14번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "15번째 스타트포스",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "15번째 스타트포스",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "스타트포스 전환기",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "레벨 내에서 여러 스타트포스 간 이동할 수 있습니다",
   "UNIVERSAL": "공통",
@@ -787,5 +787,5 @@
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "입력 차단",
   "REPLAY/CONVERT": "변환 (.json, .gdr)",
   "REPLAY/NONE": "리플레이가 선택되지 않았습니다",
-  "REPLAY/OPEN_DIR": ""
+  "REPLAY/OPEN_DIR": "폴더 열기"
 }
