--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -516,39 +516,39 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Interfazearen Tamaina",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "x",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Aldatu Hil Ondoren",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "Aldaketa Bizkorra",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "Mailaren Hasiera",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "Mailaren Hasiera",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "1. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "1. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "2. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "2. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "3. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "3. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "4. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "4. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "5. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "5. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "6. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "6. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "7. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "7. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "8. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "8. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "9. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "9. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "10. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "10. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "11. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "11. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "12. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "12. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "13. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "13. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "14. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "14. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "15. StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "15. StartPos",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "StartPos Aldatzailea",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Mailaren barruan, hainbat StartPos-en artean aldatzeko aukera ematen zaitu",
   "UNIVERSAL": "Orokorra",
@@ -787,5 +787,5 @@
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "Sarrerak Blokeatu",
   "REPLAY/CONVERT": "Bihurtu (.json, .gdr)",
   "REPLAY/NONE": "Errepikapenik Hautatu Gabe",
-  "REPLAY/OPEN_DIR": ""
+  "REPLAY/OPEN_DIR": "Karpeta Ireki"
 }
