--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -516,39 +516,39 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Tamaño",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "x",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Intercambiar al morir",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS": "Cambio rápido",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0": "Inicio del nivel",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/0/PRE": "Inicio del nivel",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1": "1.ᵉʳ StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/1/PRE": "1.ᵉʳ StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2": "2.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/2/PRE": "2.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3": "3ᵉʳ StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/3/PRE": "3ᵉʳ StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4": "4.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/4/PRE": "4.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5": "5.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/5/PRE": "5.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6": "6.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/6/PRE": "6.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7": "7.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/7/PRE": "7.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8": "8.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/8/PRE": "8.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9": "9.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/9/PRE": "9.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10": "10.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/10/PRE": "10.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11": "11.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/11/PRE": "11.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12": "12.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/12/PRE": "12.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13": "13.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/13/PRE": "13.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14": "14.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/14/PRE": "14.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15": "15.º StartPos",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SHORTCUTS/15/PRE": "15.º StartPos",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "Selector de StartPos",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Permite cambiar entre StartPos de un nivel",
   "UNIVERSAL": "Universal",
@@ -787,5 +787,5 @@
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "Bloquear entradas",
   "REPLAY/CONVERT": "Convertir macro (.json, .gdr)",
   "REPLAY/NONE": "Ninguna repetición seleccionada",
-  "REPLAY/OPEN_DIR": ""
+  "REPLAY/OPEN_DIR": "Abrir carpeta"
 }
